[package]
name = "min-tun2proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tun = "0.6.1"
pnet = "0.35.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-socks = "0.5.2"
anyhow = "1.0.86"
hyper = "1.4.1"
async-trait = "0.1.82"
bb8 = "0.8.5"
tokio-signal = "0.2.9"
thiserror = "1.0.63"
env_logger = "0.11.5"
chrono = "0.4.38"
colored = "2.1.0"
log = "0.4.22"